--- a/index.html
+++ b/index.html
@@ -21,31 +21,43 @@
       href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
     />
     <link rel="stylesheet" href="./css/style.css">
-    <title>Area of Trapezoid, with JS</title>
+    <title>Area of a trapezoid</title>
   </head>
   <body>
-    
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <h1>Area of a Trapezoid</h1>   
+    <img src="./img/trapezoid-area.jpg" alt="trapezoid-area" style="width:240px;hieght:120px;"/>   
           <!-- Numeric Textfield with Floating Label -->
     <form action="#">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base">
-        <label class="mdl-textfield__label" for="sample4">Number...</label>
+        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base-a">
+        <label class="mdl-textfield__label" for="base-a">a base</label>
         <span class="mdl-textfield__error">Input is not a number!</span>
       </div>
     </form>
           <!-- Numeric Textfield with Floating Label -->
     <form action="#">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base">
-        <label class="mdl-textfield__label" for="sample4">Number...</label>
+        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base-b">
+        <label class="mdl-textfield__label" for="base-b">b base</label>
         <span class="mdl-textfield__error">Input is not a number!</span>
       </div>
     </form>
               <!-- Numeric Textfield with Floating Label -->
     <form action="#">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base">
-        <label class="mdl-textfield__label" for="sample4">Number...</label>
+        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="height">
+        <label class="mdl-textfield__label" for="height">height
+      </label>
         <span class="mdl-textfield__error">Input is not a number!</span>
       </div>
     </form>
+    <!-- Accent-colored raised button -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick="enterclicked()">
+      Click
+    </button>
+    <div id="area"></div>
+  </body>
+</html>
+    
